--- a/resume.tex
+++ b/resume.tex
@@ -269,6 +269,32 @@
 	{http://elixir.ruhr}
 	{}
 \end{cventries}
+
+\vspace{-2mm}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     Hobbies
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\cvsection{Hobbies}
+\begin{cventries}
+	\cventry
+	{Things i'm interested in or like to do}
+	{}
+	{}
+	{}
+	{\begin{cvitems}
+		\item {Entrepreneurship}
+		\item {Technology}
+		\item {Cooking}
+		\item {Philosophy}
+		\item {Spirituality}
+		\item {Meditation}
+		\item {Yoga}
+		\item {Bouldern}
+		\item {Books}
+		\item {Photography}
+		\item {Meetups}
+		\end{cvitems}}
+\end{cventries}
     
  \begin{center}
 	\vspace{\fill}
