Add more Hobbies

--- a/resume.tex
+++ b/resume.tex
@@ -292,6 +292,7 @@
 		\item {Bouldern}
 		\item {Books}
 		\item {Photography}
+		\item {Traveling}
 		\item {Meetups}
 		\end{cvitems}}
 \end{cventries}
