Added `DevOps Gathering` to Conferences

--- a/resume.tex
+++ b/resume.tex
@@ -129,6 +129,7 @@
 		\item {RuhrSec}
 		\item {RuhrSummit}
 		\item {devcom}
+		\item {DevOps Gathering}
 		\end{cvitems}}
 	\cventry
 	{Tough Mudder Finisher}
