Add more Hobbies

--- a/resume.tex
+++ b/resume.tex
@@ -292,6 +292,7 @@
 		\item {Yoga}
 		\item {Bouldern}
 		\item {Books}
+		\item {Boardgames}
 		\item {Photography}
 		\item {Traveling}
 		\item {Meetups}
